--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     </div>
 
     <!-- Contact -->
-    <div class="contact bounce">
-      <div class="circle">
+    <div class="contact">
+      <div class="circle bounce">
         <a class="email bounce-reverse" href="mailto:gregor585@gmail.com">
           Gregor Hann<br>@gmail.com
         </a>
